<resources>
    <string name="app_name">HaVagas</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="email_att">Deseja receber atualizações?</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="outro">Outro</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="ano_de_formatura">Ano de formatura</string>
    <string name="ano_de_conclusao">Ano de conclusão</string>
    <string name="instituicao">Instituição</string>
    <string name="orientador">Orientador</string>
    <string name="tit_de_monografia">Tít. de Monografia</string>
    <string name="vagas_de_interesse">Vagas de interesse</string>
    <string name="formacao">Formação</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string-array name="formacao">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>